[gd_scene load_steps=2 format=3 uid="uid://do7liwnevxpfk"]

[ext_resource type="Script" uid="uid://cbmkhiyhkn16i" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 653.0

[node name="Start" type="Button" parent="Control"]
layout_mode = 0
offset_left = 726.0
offset_top = 301.0
offset_right = 825.0
offset_bottom = 356.0
text = "test"

[node name="SongList" type="ItemList" parent="Control"]
layout_mode = 0
offset_left = 273.0
offset_top = 204.0
offset_right = 482.0
offset_bottom = 465.0
item_count = 2
item_0/text = "Song1"
item_1/text = "Song2"

[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="item_clicked" from="Control/SongList" to="." method="_on_song_list_item_clicked"]
